# squidsat-eps

./: .gitignore  .gitmodules  LICENSE  README.md  flash.sh  monitor.py
app/: CMakeCache.txt  CMakeLists.txt  Kconfig  loopback.conf  node_a.conf  node_b.conf  node_c.conf  prj.conf  west.yml
app/boards/: nucleo_f103rb.overlay
app/include/: INA219.h  can_link.h  main.h  nka103c1b1.h  ntcle101.h  sensor_task.h  sensor_util.h  set_rail.h
app/proto/: eps_link.proto
app/src/: INA219.c  can_link.c  eps_link.proto  main.c  nka103c1b1.c  ntcle101.c  sensor_task.c  sensor_util.c  set_rail.c
